testsuite/tests/typecheck/should_fail/T15474.stderr
T15474.hs:10:1: error: [GHC-16220]
    • Uninferrable type variable k0 in
      the type synonym right-hand side: forall (t :: k0). Proxy @{k0} t
    • In the type synonym declaration for ‘Forall’

